--- a/6.html
+++ b/6.html
@@ -20,6 +20,18 @@
     </p>
     <footer>
         <p>&copy; 2020 Krit Garg</p>
+        <p>Disclaimer: This website is created for educational purposes only.</p>
+        <p>Disclaimer: This website is created for educational purposes only.</p>
+        <p>Disclaimer: This website is created for educational purposes only.</p>
+        <p>Disclaimer: This website is created for educational purposes only.</p>
+        <p>Disclaimer: This website is created for educational purposes only.</p>
+        <p>Disclaimer: This website is created for educational purposes only.</p>
+        <p>Disclaimer: This website is created for educational purposes only.</p>
+        <p>Disclaimer: This website is created for educational purposes only.</p>
+        <p>Disclaimer: This website is created for educational purposes only.</p>
+        <p>Disclaimer: This website is created for educational purposes only.</p>
+        <h1>hi helfhfjfhjghjghjgh gjgh jd </h1>
+
     </footer>
 
 </body>
