--- a/6.html
+++ b/6.html
@@ -32,6 +32,9 @@
         <p>Disclaimer: This website is created for educational purposes only.</p>
         <h1>hi helfhfjfhjghjghjgh gjgh jd </h1>
 
+        lorem ipsum dolor sit amet, consectetur adipisicing elit
+        
+
     </footer>
 
 </body>
