--- a/6.html
+++ b/6.html
@@ -33,7 +33,7 @@
         <h1>hi helfhfjfhjghjghjgh gjgh jd </h1>
 
         lorem ipsum dolor sit amet, consectetur adipisicing elit
-        
+    <h1>hi helfhfjfhjghjghjgh gjgh jd </h1>
 
     </footer>
 
