--- a/5.html
+++ b/5.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/submit" method="post">
+    <form action="" method="post">
         <button type="submit">Submit</button>
     </form>
 </body>
